<resources>
    <string name="app_name">비품 관리</string>
    <string name="equipment_list">비품 목록</string>
    <string name="equipment_manage">비품 관리</string>
    <string name="search">검색</string>
    <string name="rental">대여</string>
    <string name="user">내 정보</string>
    <string name="update">업데이트</string>
    <string name="delete">삭제</string>
    <string name="back">뒤로가기</string>
    <string name="title_or_content">제목 혹은 내용</string>
    <string name="search_explain">게시판의 글을 검색해보세요</string>
    <string name="equipment_name">비품명</string>
    <string name="total_num">전체 개수: </string>
    <string name="current_num">현재 개수: </string>
    <string name="add">추가</string>
    <string name="possible_rental">대여 가능</string>
    <string name="impossible_rental">대여 불가능</string>
    <string name="want_email">사용하실 아이디(이메일)</string>
    <string name="want_psw">사용하실 비밀번호</string>
    <string name="want_psw_check">사용하실 비밀번호 재확인</string>
    <string name="input_email">아이디</string>
    <string name="input_psw">비밀번호</string>
    <string name="make_user">계정생성</string>
    <string name="sign_in">로그인</string>
    <string name="sign_out">로그아웃</string>
    <string name="sign_up">회원가입</string>
    <string name="change_psw">비밀번호 변경</string>
    <string name="delete_user">회원탈퇴</string>
    <string name="name">사용자 이름</string>
    <string name="email">사용자 이메일</string>
    <string name="current_password">현재 비밀번호</string>
    <string name="new_password">신규 비밀번호</string>
    <string name="new_password_check">신규 비밀번호 재확인</string>
    <string name="certification_for_delete">Account를 영구적으로 삭제하기 전에 먼저 비밀번호를 입력해주세요.</string>
    <string name="delete_title">본인 Account 확인</string>
    <string name="equipment">비품</string>
    <string name="permission_dialog_title">허가 알림</string>
    <string name="permission_dialog_message">이미지를 불러오기 위해서는 허가가 필요합니다.</string>
    <string name="permission_ok">허가</string>
    <string name="permission_denied">거부</string>
    <string name="borrow_num">대여 개수</string>
</resources>