<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/delete_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_title"
        android:textSize="22dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@color/burly_wood"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/message_to_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/message_to_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/certification_for_delete"
        android:textColor="@color/black"
        android:textSize="23dp"
        app:layout_constraintTop_toBottomOf="@id/delete_title"
        app:layout_constraintBottom_toTopOf="@id/delete_input_psw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/delete_input_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_psw"
        android:minHeight="48dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_to_user"
        android:inputType="textPassword"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delete_account_btn"
        android:text="@string/delete_user"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/delete_input_psw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/blunt_button"
        app:layout_constraintVertical_bias="0.1"
        />
</androidx.constraintlayout.widget.ConstraintLayout>