<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="main_activity"
            type="com.example.myapplication.activity.SelectButtonActivity"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SelectButtonActivity">

        <TextView
            android:id="@+id/equipment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipment"
            android:textSize="80sp"
            android:textColor="@color/black"
            android:layout_marginTop="50sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_rental_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:drawableTop="@drawable/rental_image"
            android:text="@string/rental"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:background="@drawable/blunt_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/main_update_button"
            app:layout_constraintTop_toBottomOf="@id/equipment_text"
            app:layout_constraintBottom_toTopOf="@id/main_search_button"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_update_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:drawableTop="@drawable/update_image"
            android:text="@string/update"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:background="@drawable/blunt_button"
            app:layout_constraintStart_toEndOf="@+id/main_rental_button"
            app:layout_constraintTop_toBottomOf="@id/equipment_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/main_search_button"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_search_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:drawableTop="@drawable/search_image"
            android:text="@string/search"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:background="@drawable/blunt_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_rental_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>