<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="user"
            type="com.example.domain.data.user.User"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="내 정보 수정"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@color/burly_wood"
            android:gravity="center"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_name"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_info"
            app:layout_constraintEnd_toStartOf="@id/user_name_print"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_name_print"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="@{user.name}"
            android:layout_marginLeft="59dp"
            app:layout_constraintTop_toBottomOf="@id/user_info"
            app:layout_constraintStart_toEndOf="@id/user_name"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_email"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_email_print"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="@{user.emailId}"
            android:layout_marginLeft="40dp"
            app:layout_constraintTop_toBottomOf="@id/user_name_print"
            app:layout_constraintStart_toEndOf="@id/user_email"
            />


        <TextView
            android:id="@+id/user_current_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/current_password"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_email"
            app:layout_constraintEnd_toStartOf="@id/user_current_password_init"
            />

        <EditText
            android:id="@+id/user_current_password_init"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintStart_toEndOf="@id/user_current_password"
            app:layout_constraintTop_toBottomOf="@id/user_email_print"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/user_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_current_password"
            app:layout_constraintEnd_toStartOf="@id/user_new_password_init"
            />

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/user_new_password_init"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:maxLength="20"
            android:layout_marginLeft="40dp"
            app:layout_constraintTop_toBottomOf="@id/user_current_password_init"
            app:layout_constraintStart_toEndOf="@id/user_new_password"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change_psw_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/blunt_button"
            android:text="@string/change_psw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_new_password_init" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_out_btn"
            android:text="@string/sign_out"
            app:layout_constraintTop_toBottomOf="@id/change_psw_btn"
            app:layout_constraintBottom_toTopOf="@id/delete_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/blunt_button"
            app:layout_constraintVertical_chainStyle="packed"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/delete_user"
            android:text="@string/delete_user"
            app:layout_constraintTop_toBottomOf="@id/sign_out_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/blunt_button"
            app:layout_constraintVertical_chainStyle="packed"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>