<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"                   >

    <data>
        <variable
            name="search_activity"
            type="com.example.myapplication.activity.SearchActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blunt_button"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@drawable/back_arrow"
                android:background="@color/transparent"
                android:layout_gravity="center"
                android:contentDescription="@string/back"
                app:layout_constraintStart_toStartOf="@+id/search_top_bar"
                app:layout_constraintTop_toTopOf="@+id/search_top_bar"
                app:layout_constraintBottom_toBottomOf="@+id/search_top_bar"
                app:layout_constraintEnd_toStartOf="@+id/search_content_text_view"/>

            <EditText
                android:id="@+id/search_content_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/title_or_content"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/transparent"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:autofillHints="no"
                android:inputType="none"
                app:layout_constraintStart_toEndOf="@id/back_button"
                app:layout_constraintTop_toTopOf="@+id/search_top_bar"
                app:layout_constraintBottom_toBottomOf="@+id/search_top_bar"
                app:layout_constraintEnd_toStartOf="@id/search_activity_search_button"/>

            <ImageButton
                android:id="@+id/search_activity_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/search_image"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="@id/search_top_bar"
                app:layout_constraintTop_toTopOf="@+id/search_top_bar"
                app:layout_constraintBottom_toBottomOf="@+id/search_top_bar"
                app:layout_constraintStart_toEndOf="@id/search_content_text_view"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/search_explain_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_explain"
            android:textSize="20sp"
            app:drawableTopCompat="@drawable/search_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>